Fixed heading alignment for mobile

--- a/styles/design.css
+++ b/styles/design.css
@@ -20,7 +20,7 @@ body {font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial sans-serif; f
 /*** Header ***/
 
 header {
-  padding: 0 1em 4em 0;
+  padding: 0 1em 4em 1em;
   text-align: center;
 }
 
@@ -33,8 +33,8 @@ header {
 
 header h1 {
   text-align: center;
-  font-size: 3em;
-  padding: .5em 1em 0 .5em;
+  font-size: 2.5em;
+  padding: .5em .5em 0 .5em;
   margin: 0 auto;
   display: block;
   font-family: 'Pacifico', cursive;
